--- a/package.json
+++ b/package.json
@@ -22,17 +22,26 @@
     "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
     "@tauri-apps/cli": "^1.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "autoprefixer": "^10.4.13",
-    "parcel-bundler": "^1.12.5",
-    "parcel-plugin-svelte": "^4.0.9",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard-with-typescript": "^31.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "parcel-bundler": "^1.3.1",
+    "parcel-plugin-svelte": "^0.0.2",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.2",
+    "prettier": "2.8.3",
     "prettier-plugin-svelte": "^2.9.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.0",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.4.1",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.4",
     "vite": "^4.0.0"
   }
 }
