--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tauri-apps/api": "^1.2.0",
     "daisyui": "^2.46.1",
     "fp-ts": "^2.13.1",
+    "lodash-es": "^4.17.21",
     "zod": "^3.20.2"
   },
   "devDependencies": {
