--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tanstack/svelte-table": "^8.7.6",
     "@tauri-apps/api": "^1.2.0",
+    "@tsconfig/svelte": "^4.0.1",
     "daisyui": "^2.46.1",
     "fp-ts": "^2.13.1",
     "lodash-es": "^4.17.21",
